[tool.poetry]
name = "aladdin"
version = "1.19.7.31"
description = ""
authors = ["Fivestars <dev@fivestars.com>"]
include = [
    "aladdin.sh",
    "aladdin-container.sh",
    "scripts/*",
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.21.38"
cached-property = "1.5.1"
jmespath = "0.10.0"
kubernetes = "12.0.01"
coloredlogs = "^14.0"
verboselogs = "^1.7"
PyYAML = "^5.3.1"
networkx = "^2.4"
jinja2 = "^2.11.2"
lazy-object-proxy = "^1.5.1"
urllib3 = "1.26.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}
"backports.cached-property" = {version = "^1.0.1", python = "<3.8"}
# jinja2 dependency, but there is a breaking change in v2.1.0
markupsafe = "2.0.1"  # https://github.com/pallets/markupsafe/issues/284
aws-sso-util = "^4.28.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aladdin = "aladdin.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
