[tool.poetry]
name = "aladdin"
version = "1.28.10.0"
description = ""
authors = ["Fivestars <dev@fivestars.com>"]
include = [
    "aladdin.sh",
    "aladdin-container.sh",
    "scripts/*",
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.21.38"
cached-property = "1.5.2"
jmespath = "1.0.1"
kubernetes = "20.13.0"
coloredlogs = "^15.0.1"
verboselogs = "^1.7"
PyYAML = "^6.0.1"
lazy-object-proxy = "^1.5.1"
urllib3 = "1.26.12"
importlib-metadata = {version = "^1.0", python = "<3.8"}
"backports.cached-property" = {version = "^1.0.1", python = "<3.8"}
aws-sso-util = "^4.28.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aladdin = "aladdin.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
