[tool.poetry]
name = "aladdin"
version = "1.30.10.5"
description = ""
authors = ["Fivestars <dev@fivestars.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.38"
cached-property = "1.5.2"
jmespath = "1.0.1"
kubernetes = "20.13.0"
coloredlogs = "^15.0.1"
verboselogs = "^1.7"
PyYAML = "^6.0.1"
networkx = "^2.4"
jinja2 = "^2.11.2"
lazy-object-proxy = "^1.5.1"
urllib3 = "1.26.12"
# jinja2 dependency, but there is a breaking change in v2.1.0
markupsafe = "2.0.1"  # https://github.com/pallets/markupsafe/issues/284
aws-sso-util = "^4.28.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
aladdin = "aladdin.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
