[tool.poetry]
name = "build-components"
version = "0.1.0"
description = """
An internal project to provide the build-components script at the command line.
This script will build a "componentized" aladdin project."""
authors = ["Fivestars <dev@fivestars.com>"]

[tool.poetry.dependencies]
python = "^3.7"
coloredlogs = "^14.0"
verboselogs = "^1.7"
PyYAML = "^5.3.1"
networkx = "^2.4"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
build-components = "build_components.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
